[metadata]
name = gsgmorph
version = 1.0.1
author = If and Only If (Iff) Technologies
author_email = john@qcatdavis.org
description = The Graph/Subgraph Isomorphism Library for Quantum Annealers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IffTech/GSG-Morph
project_urls =
    Bug Tracker = https://github.com/IffTech/GSG-Morph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Natural Language :: English
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    networkx
    pyqubo

[options.packages.find]
where = src